# maxminddb-rust

./: .gitignore  .gitmodules  .precious.toml  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  UPGRADING.md  aliases.js  crates.js  help.html  index.html  reader.rs  search-index.js  settings.html  source-files.js  src-files.js
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: audit.yml  codeql.yml  doc.yml  release.yml  rust.yml
benches/: common.rs  lookup.rs  metadata.rs  serde_usage.rs  within.rs
dev-bin/: release.sh
example/: lookup.rs
examples/: lookup.rs  within.rs
log/: fn.set_logger.html  struct.Metadata.html  struct.MetadataBuilder.html  struct.ParseLevelError.html  struct.Record.html  struct.RecordBuilder.html  struct.SetLoggerError.html  trait.Log.html
master/: aliases.js  search-index.js  settings.html  source-files.js
master/log/: all.html  enum.Level.html  enum.LevelFilter.html  index.html  struct.Metadata.html  struct.MetadataBuilder.html  struct.ParseLevelError.html  struct.Record.html  struct.RecordBuilder.html  struct.SetLoggerError.html
master/maxminddb/: OwnedReader.t.html  OwnedReaderFile.t.html  all.html  enum.MaxMindDBError.html  index.html  sidebar-items.js  struct.Metadata.html  struct.OwnedReaderFile.html  struct.Reader.html  type.OwnedReader.html
master/proc_macro2/: enum.Delimiter.html  enum.Spacing.html  enum.TokenTree.html  index.html  struct.Group.html  struct.Ident.html  struct.LexError.html  struct.Literal.html  struct.Punct.html  struct.Span.html  struct.TokenStream.html
master/quote/: index.html  macro.quote.html  macro.quote_spanned.html  trait.ToTokens.html
master/serde/: index.html  trait.Deserialize.html
master/syn/: all.html  enum.AttrStyle.html  enum.BareFnArgName.html  enum.BinOp.html  enum.Data.html  enum.Expr.html  enum.Fields.html  enum.FloatSuffix.html  enum.GenericArgument.html  enum.GenericParam.html  enum.IntSuffix.html  enum.Lit.html  enum.MacroDelimiter.html  enum.Member.html  enum.Meta.html  enum.NestedMeta.html  enum.PathArguments.html  enum.ReturnType.html  enum.StrStyle.html  enum.TraitBoundModifier.html  enum.Type.html  enum.TypeParamBound.html  enum.UnOp.html  enum.Visibility.html  enum.WherePredicate.html  fn.parse.html  fn.parse2.html  fn.parse_str.html  index.html  macro.Token.html  macro.braced.html  macro.bracketed.html  macro.custom_keyword.html  macro.parenthesized.html  macro.parse_macro_input.html  macro.parse_quote.html  struct.Abi.html  (+105 more)
maxminddb/: MaxMindDBError.t.html  all.html  enum.MaxMindDBError.html  enum.MaxMindDbError.html  enum.PathElement.html  fn.deserialize_any_with_raw_strings.html  index.html  macro.path.html  sidebar-items.js  struct.LookupResult.html  struct.Metadata.html  struct.Mmap.html  struct.Reader.html  struct.Within.html  struct.WithinItem.html  struct.WithinOptions.html
search.index/: 01ac96c2a0.js  01e328bca2.js  023801a02ab7.js  0330a9d62b7e.js  05a74426e0.js  06780439841a.js  069c91a45b87.js  06b9076df7.js  09def0bcb0d3.js  0a562e3f8b4f.js  0aa5e7393662.js  0b2676977a4d.js  0d6c9dbab333.js  0e5c08092832.js  112b5c48f0.js  11dc4f5ae2c8.js  1284e7842f.js  12a55b1cd9c4.js  1459c17eabcd.js  145e3503ff.js  15bacc94f1c5.js  15e2f7362a.js  1698c8a94f.js  184a9e9cf9.js  19e559a137.js  1a1a10ee48.js  1b3157fb71.js  1baef8f316ea.js  1d6832a53b.js  1d8bf9c327.js  1f60f1ceac.js  1fd8ec0528.js  208db5ed4c52.js  2154cc8165a3.js  219bcbbc6d7c.js  22112ead50.js  227e72f50ca3.js  23b61be0e6fb.js  23d386caeb97.js  23f82d856b45.js  (+133 more)
src/: decoder.rs  error.rs  geoip2.rs  lib.rs  metadata.rs  reader.rs  reader_test.rs  result.rs  within.rs
syn/: struct.Ident.html
(+431 files in other folders)
