[package]
name = "maxminddb"
version = "0.23.0"
authors = [ "Gregory J. Oschwald <oschwald@gmail.com>" ]
description = "Library for reading MaxMind DB format used by GeoIP2 and GeoLite2"
readme = "README.md"
keywords = ["MaxMind", "GeoIP2", "GeoIP", "geolocation", "ip"]
categories = ["database", "network-programming"]
homepage = "https://github.com/oschwald/maxminddb-rust"
documentation = "http://oschwald.github.io/maxminddb-rust/maxminddb/struct.Reader.html"
repository = "https://github.com/oschwald/maxminddb-rust"
license = "ISC"
include = ["/Cargo.toml", "/benches/*.rs", "/src/**/*.rs", "/README.md", "/LICENSE"]
edition = "2021"

[features]
default = []
mmap = ["memmap2"]
unsafe-str-decode = []

[lib]
name ="maxminddb"
path = "src/maxminddb/lib.rs"

[dependencies]
ipnetwork = "0.20.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
memchr = "2.4"
memmap2 = { version = "0.5.0", optional = true }

[dev-dependencies]
env_logger = "0.9"
criterion = "0.3"
fake = "2.4"
rayon = "1.5"

[[bench]]
name = "lookup"
harness = false
