[package]
name = "maxminddb"
version = "0.25.0"
authors = [ "Gregory J. Oschwald <oschwald@gmail.com>" ]
description = "Library for reading MaxMind DB format used by GeoIP2 and GeoLite2"
readme = "README.md"
keywords = ["MaxMind", "GeoIP2", "GeoIP", "geolocation", "ip"]
categories = ["database", "network-programming"]
homepage = "https://github.com/oschwald/maxminddb-rust"
documentation = "http://oschwald.github.io/maxminddb-rust/maxminddb/struct.Reader.html"
repository = "https://github.com/oschwald/maxminddb-rust"
license = "ISC"
include = ["/Cargo.toml", "/benches/*.rs", "/src/**/*.rs", "/README.md", "/LICENSE"]
edition = "2021"

[features]
default = []
simdutf8 = ["dep:simdutf8"]
mmap = ["memmap2"]
unsafe-str-decode = []

[lib]
name ="maxminddb"
path = "src/maxminddb/lib.rs"

[dependencies]
ipnetwork = "0.21.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
memchr = "2.4"
memmap2 = { version = "0.9.0", optional = true }
simdutf8 = { version = "0.1.5", optional = true }

[dev-dependencies]
env_logger = "0.11"
criterion = "0.5"
fake = "3.0"
rayon = "1.5"
serde_json = "1.0"

[[bench]]
name = "lookup"
harness = false
