[package]
name = "maxminddb"
version = "0.27.1"
authors = [ "Gregory J. Oschwald <oschwald@gmail.com>" ]
description = "Library for reading MaxMind DB format used by GeoIP2 and GeoLite2"
readme = "README.md"
keywords = ["MaxMind", "GeoIP2", "GeoIP", "geolocation", "ip"]
categories = ["database", "network-programming"]
homepage = "https://github.com/oschwald/maxminddb-rust"
documentation = "https://docs.rs/maxminddb"
repository = "https://github.com/oschwald/maxminddb-rust"
license = "ISC"
include = ["/Cargo.toml", "/benches/*.rs", "/src/**/*.rs", "/README.md", "/UPGRADING.md", "/LICENSE"]
edition = "2021"

[features]
default = []
# SIMD-accelerated UTF-8 validation during string decoding
simdutf8 = ["dep:simdutf8"]
# Memory-mapped file access for better performance in long-running applications
mmap = ["memmap2"]
# Skip UTF-8 validation for maximum performance (mutually exclusive with simdutf8)
unsafe-str-decode = []

[lib]
name = "maxminddb"

[dependencies]
ipnetwork = "0.21.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
memchr = "2.4"
memmap2 = { version = "0.9.0", optional = true }
simdutf8 = { version = "0.1.5", optional = true }
thiserror = "2.0"

[dev-dependencies]
env_logger = "0.11"
criterion = "0.8"
rayon = "1.5"
serde_json = "1.0"

[[bench]]
name = "lookup"
harness = false
